add components in activity game

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/oswald_medium"
-        android:gravity="center"
         android:text="match the cover of the book with its first line"
+        android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/light_blue"
         android:textSize="50sp"
