--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -41,4 +41,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/background_activity_final" />
 
+    <TextView
+        android:id="@+id/text_correct_activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/oswald_medium"
+        android:text="@string/correct_answers"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/light_blue"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/text_wrong_activity_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/background_activity_final" />
+
+    <TextView
+        android:id="@+id/text_wrong_activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/oswald_medium"
+        android:text="@string/wrong_answers"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/light_blue"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/text_activity_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_correct_activity_main" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
