--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,7 +7,7 @@
     tools:context=".mainScreen.MainActivity">
 
     <ImageView
-        android:id="@+id/background_activity_main"
+        android:id="@+id/main_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/book_activity_main"
+        android:id="@+id/main_image_book"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -27,35 +27,35 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_activity_main"
+        android:id="@+id/main_text_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/oswald_medium"
-        android:text="match the cover of the book with its first line"
+        android:text="@string/info"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/light_blue"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_activity_main"
+        android:textSize="@dimen/big_text_size"
+        app:layout_constraintBottom_toTopOf="@+id/main_button_play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/background_activity_main" />
+        app:layout_constraintTop_toBottomOf="@id/main_background" />
 
     <Button
-        android:id="@+id/button_activity_main"
+        android:id="@+id/main_button_play"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="@dimen/margin_size"
+        android:layout_marginEnd="@dimen/margin_size"
+        android:layout_marginBottom="@dimen/margin_size"
         android:background="@drawable/rectangle"
         android:fontFamily="@font/roboto_bold"
-        android:text="Play"
-        android:textSize="30sp"
+        android:text="@string/play"
+        android:textSize="@dimen/small_text_size"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_activity_main" />
+        app:layout_constraintTop_toBottomOf="@id/main_text_info" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
