--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -49,35 +49,35 @@
         app:layout_constraintTop_toBottomOf="@id/game_text_quiz">
 
         <ImageView
-            android:id="@+id/book_1_activity_game"
+            android:id="@+id/game_image_first_book"
             android:layout_width="0dp"
             android:layout_height="128dp"
             android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/book_2_activity_game"
+            app:layout_constraintEnd_toStartOf="@id/game_image_second_book"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/game_text_quiz"
             tools:src="@drawable/book_1" />
 
         <ImageView
-            android:id="@+id/book_2_activity_game"
+            android:id="@+id/game_image_second_book"
             android:layout_width="0dp"
             android:layout_height="128dp"
             android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/book_3_activity_game"
-            app:layout_constraintStart_toEndOf="@id/book_1_activity_game"
+            app:layout_constraintEnd_toStartOf="@id/game_image_third_book"
+            app:layout_constraintStart_toEndOf="@id/game_image_first_book"
             app:layout_constraintTop_toBottomOf="@id/game_text_quiz"
             tools:src="@drawable/book_2" />
 
         <ImageView
-            android:id="@+id/book_3_activity_game"
+            android:id="@+id/game_image_third_book"
             android:layout_width="0dp"
             android:layout_height="128dp"
             android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/book_2_activity_game"
+            app:layout_constraintStart_toEndOf="@id/game_image_second_book"
             app:layout_constraintTop_toBottomOf="@id/game_text_quiz"
             tools:src="@drawable/book_3" />
 
