--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="image_size">150dp</dimen>
     <dimen name="margin_size">64dp</dimen>
     <dimen name="big_text_size">50sp</dimen>
-    <dimen name="small_text_size">30sp</dimen>
+    <dimen name="medium_text_size">30sp</dimen>
+    <dimen name="small_text_size">20sp</dimen>
 </resources>
