--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -27,6 +27,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/final_text_quiz_is_over"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_size"
+        android:fontFamily="@font/oswald_medium"
+        android:text="@string/quiz_is_over"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/light_blue"
+        android:textSize="@dimen/big_text_size"
+        app:layout_constraintBottom_toTopOf="@id/final_text_correct_answer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/final_image_book" />
+
+    <TextView
         android:id="@+id/final_text_correct_answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,11 +51,11 @@
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/light_blue"
-        android:textSize="30sp"
+        android:textSize="@dimen/medium_text_size"
         app:layout_constraintBottom_toTopOf="@id/final_text_wrong_answer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/final_background" />
+        app:layout_constraintTop_toBottomOf="@id/final_text_quiz_is_over" />
 
     <TextView
         android:id="@+id/final_text_wrong_answer"
@@ -50,25 +66,22 @@
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/light_blue"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@id/final_text_quiz_is_over"
+        android:textSize="@dimen/medium_text_size"
+        app:layout_constraintBottom_toTopOf="@id/final_recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/final_text_correct_answer" />
 
-    <TextView
-        android:id="@+id/final_text_quiz_is_over"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/final_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/oswald_medium"
-        android:text="@string/quiz_is_over"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@color/light_blue"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/final_background" />
+        app:layout_constraintTop_toBottomOf="@id/final_text_wrong_answer"
+        tools:listitem="@layout/item_question" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
