--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".gameScreen.GameActivity">
+    tools:context=".presentation.gameScreen.GameActivity">
 
     <ImageView
         android:id="@+id/game_background"
