--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -1,87 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".finalScreen.FinalActivity">
+    tools:context=".presentation.finalScreen.FinalActivity">
 
-    <ImageView
-        android:id="@+id/final_background"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/final_image_book"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/books"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/final_text_quiz_is_over"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_size"
-        android:fontFamily="@font/oswald_medium"
-        android:text="@string/quiz_is_over"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@color/light_blue"
-        android:textSize="@dimen/big_text_size"
-        app:layout_constraintBottom_toTopOf="@id/final_text_correct_answer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/final_image_book" />
+            <ImageView
+                android:id="@+id/final_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/background" />
 
-    <TextView
-        android:id="@+id/final_text_correct_answer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/oswald_medium"
-        android:text="@string/correct_answers"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@color/light_blue"
-        android:textSize="@dimen/medium_text_size"
-        app:layout_constraintBottom_toTopOf="@id/final_text_wrong_answer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/final_text_quiz_is_over" />
+            <ImageView
+                android:id="@+id/final_image_book"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/books" />
+        </FrameLayout>
 
-    <TextView
-        android:id="@+id/final_text_wrong_answer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/oswald_medium"
-        android:text="@string/wrong_answers"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@color/light_blue"
-        android:textSize="@dimen/medium_text_size"
-        app:layout_constraintBottom_toTopOf="@id/final_recycler"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/final_text_correct_answer" />
+        <TextView
+            android:id="@+id/final_text_quiz_is_over"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_size"
+            android:fontFamily="@font/oswald_medium"
+            android:text="@string/quiz_is_over"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/light_blue"
+            android:textSize="@dimen/big_text_size" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/final_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/final_text_wrong_answer"
-        tools:listitem="@layout/item_question" />
+        <TextView
+            android:id="@+id/final_text_correct_answer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/oswald_medium"
+            android:text="@string/correct_answers"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/light_blue"
+            android:textSize="@dimen/medium_text_size" />
 
+        <TextView
+            android:id="@+id/final_text_wrong_answer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/oswald_medium"
+            android:text="@string/wrong_answers"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/light_blue"
+            android:textSize="@dimen/medium_text_size"
+            app:layout_constraintBottom_toTopOf="@id/final_recycler"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/final_text_correct_answer" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/final_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false"
+            android:scrollbars="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/final_text_wrong_answer"
+            tools:listitem="@layout/item_question" />
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
