--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -45,9 +45,9 @@
         android:id="@+id/main_button_play"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_size"
-        android:layout_marginEnd="@dimen/margin_size"
-        android:layout_marginBottom="@dimen/margin_size"
+        android:layout_marginStart="@dimen/spacing_large"
+        android:layout_marginEnd="@dimen/spacing_large"
+        android:layout_marginBottom="@dimen/spacing_large"
         android:background="@drawable/rectangle"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/play"
