--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -34,7 +34,7 @@
             android:id="@+id/final_text_quiz_is_over"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_size"
+            android:layout_marginTop="@dimen/spacing_large"
             android:fontFamily="@font/oswald_medium"
             android:text="@string/quiz_is_over"
             android:textAlignment="center"
