--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -1,44 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ImageView
+        android:layout_marginEnd="@dimen/spacing_medium"
+        android:id="@+id/item_image"
+        android:alpha="0.3"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/image_height"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="@id/item_text_question"
+        app:layout_constraintEnd_toStartOf="@id/item_text_question"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/book_1" />
 
     <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/item_text_question"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:fontFamily="@font/roboto_bold"
-        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/item_image"
+        app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/light_blue"
         tools:text="@string/harry_potter" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/item_correctness"
+        android:layout_width="wrap_content"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="@id/item_image"
+        app:layout_constraintEnd_toEndOf="@id/item_image"
+        app:layout_constraintStart_toStartOf="@id/item_image"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toTopOf="@id/item_image"
+        tools:src="@drawable/ic_check" />
 
-        <TextView
-            android:id="@+id/item_text_correctness"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto_bold"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textColor="@color/light_blue"
-            android:textSize="@dimen/medium_text_size"
-            tools:text="Correct" />
-
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/image_size"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            tools:src="@drawable/book_1" />
-
-    </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
