--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="image_size">150dp</dimen>
+    <dimen name="image_height">128dp</dimen>
+
     <dimen name="spacing_large">64dp</dimen>
+    <dimen name="spacing_medium">32dp</dimen>
+
     <dimen name="big_text_size">48sp</dimen>
     <dimen name="medium_text_size">28sp</dimen>
 </resources>
