--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -35,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_large"
+            android:layout_marginHorizontal="@dimen/spacing_large"
             android:fontFamily="@font/oswald_medium"
             android:text="@string/quiz_is_over"
             android:textAlignment="center"
@@ -46,6 +47,7 @@
             android:id="@+id/final_text_correct_answer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/spacing_large"
             android:fontFamily="@font/oswald_medium"
             android:text="@string/correct_answers"
             android:textAlignment="center"
@@ -54,6 +56,7 @@
             android:textSize="@dimen/medium_text_size" />
 
         <TextView
+            android:layout_marginHorizontal="@dimen/spacing_large"
             android:id="@+id/final_text_wrong_answer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,6 +68,8 @@
             android:textSize="@dimen/medium_text_size" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="@dimen/spacing_medium"
+            android:layout_marginHorizontal="@dimen/spacing_large"
             android:id="@+id/final_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,6 +77,5 @@
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_question" />
-
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
