--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginBottom="@dimen/spacing_medium"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -20,6 +21,7 @@
 
     <TextView
         android:layout_width="0dp"
+        android:fontFamily="@font/roboto_bold"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/item_text_question"
