--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="image_height">128dp</dimen>
+    <dimen name="button_radius">32dp</dimen>
 
     <dimen name="spacing_large">32dp</dimen>
     <dimen name="spacing_medium">16dp</dimen>
 
-    <dimen name="big_text_size">48sp</dimen>
-    <dimen name="medium_text_size">28sp</dimen>
+    <dimen name="big_text_size">28sp</dimen>
+    <dimen name="medium_text_size">21sp</dimen>
 </resources>
