--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,77 +8,83 @@
 
     <ImageView
         android:id="@+id/game_background"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/spacing_medium"
         android:adjustViewBounds="true"
+        android:scaleType="fitXY"
         android:src="@drawable/background"
+        app:layout_constraintBottom_toTopOf="@id/game_text_quiz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/game_image_book"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:src="@drawable/books"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0" />
 
     <TextView
         android:id="@+id/game_text_quiz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/spacing_large"
+        android:layout_marginBottom="@dimen/spacing_medium"
         android:fontFamily="@font/roboto_bold"
         android:textAlignment="center"
         android:textColor="@color/light_blue"
+        app:layout_constraintBottom_toTopOf="@id/game_image_first_book"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/game_background"
         tools:fontFamily="@null"
         tools:text="Мистер и миссис Дурсль проживали в доме номер четыре по Тисовой улице и всегда с гордостью заявляли, что они, слава богу, абсолютно нормальные люди." />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+
+    <ImageView
+        android:id="@+id/game_image_first_book"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/image_height"
+        android:layout_marginStart="@dimen/spacing_large"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        android:layout_marginBottom="@dimen/spacing_large"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/game_image_second_book"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:src="@drawable/book_1" />
+
+    <ImageView
+        android:id="@+id/game_image_second_book"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/image_height"
+        android:layout_marginBottom="@dimen/spacing_large"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/game_image_third_book"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/game_image_first_book"
+
+        tools:src="@drawable/book_2" />
+
+    <ImageView
+        android:id="@+id/game_image_third_book"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/image_height"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_large"
+        android:layout_marginBottom="@dimen/spacing_large"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/game_text_quiz">
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/game_image_second_book"
+        tools:src="@drawable/book_3" />
 
-        <ImageView
-            android:id="@+id/game_image_first_book"
-            android:layout_width="0dp"
-            android:layout_height="128dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/game_image_second_book"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/game_text_quiz"
-            tools:src="@drawable/book_1" />
-
-        <ImageView
-            android:id="@+id/game_image_second_book"
-            android:layout_width="0dp"
-            android:layout_height="128dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/game_image_third_book"
-            app:layout_constraintStart_toEndOf="@id/game_image_first_book"
-            app:layout_constraintTop_toBottomOf="@id/game_text_quiz"
-            tools:src="@drawable/book_2" />
-
-        <ImageView
-            android:id="@+id/game_image_third_book"
-            android:layout_width="0dp"
-            android:layout_height="128dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/game_image_second_book"
-            app:layout_constraintTop_toBottomOf="@id/game_text_quiz"
-            tools:src="@drawable/book_3" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
