--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -21,9 +21,10 @@
 
     <ImageView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:src="@drawable/books"
+        app:layout_constraintBottom_toTopOf="@id/game_text_quiz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,6 +39,7 @@
         android:fontFamily="@font/roboto_bold"
         android:textAlignment="center"
         android:textColor="@color/light_blue"
+        android:textSize="@dimen/small_text_size"
         app:layout_constraintBottom_toTopOf="@id/game_image_first_book"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
