--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginBottom="@dimen/spacing_medium"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginBottom="@dimen/spacing_medium">
 
     <ImageView
-        android:layout_marginEnd="@dimen/spacing_medium"
         android:id="@+id/item_image"
-        android:alpha="0.3"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/image_height"
+        android:layout_marginEnd="@dimen/spacing_medium"
         android:adjustViewBounds="true"
+        android:alpha="0.3"
         app:layout_constraintBottom_toBottomOf="@id/item_text_question"
         app:layout_constraintEnd_toStartOf="@id/item_text_question"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,25 +20,26 @@
         tools:src="@drawable/book_1" />
 
     <TextView
-        android:layout_width="0dp"
-        android:fontFamily="@font/roboto_bold"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/item_text_question"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fontFamily="@font/roboto_bold"
+        android:textColor="@color/light_blue"
+        android:textSize="@dimen/small_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/item_image"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/light_blue"
         tools:text="@string/harry_potter" />
 
     <ImageView
         android:id="@+id/item_correctness"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="@id/item_image"
         app:layout_constraintEnd_toEndOf="@id/item_image"
         app:layout_constraintStart_toStartOf="@id/item_image"
-        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/item_image"
         tools:src="@drawable/ic_check" />
 
