--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="spacing_large">32dp</dimen>
     <dimen name="spacing_medium">16dp</dimen>
 
-    <dimen name="big_text_size">28sp</dimen>
-    <dimen name="medium_text_size">21sp</dimen>
+    <dimen name="big_text_size">50sp</dimen>
+    <dimen name="medium_text_size">32sp</dimen>
+    <dimen name="small_text_size">20sp</dimen>
 </resources>
